--- a/assets/css/404.css
+++ b/assets/css/404.css
@@ -19,7 +19,7 @@ a {
 }
 .message h1 {
     font-size: 5em;
-    color: #538826;
+    color: #edfdff;
     letter-spacing: 6px;
     font-weight: 400;
     font-family: 'Monsieur La Doulaise', cursive;
