ブロック分けを実装

--- a/source/views/index.html
+++ b/source/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Material Design Lite</title>
+    <title>Home Diary</title>
     <link rel="icon" href="/images/icon/favicon-256x256.png" sizes="256x256" type="image/png">
     <link rel="icon" href="/images/icon/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
@@ -22,15 +22,14 @@
         <div class="mdl-layout--large-screen-only mdl-layout__header-row"></div>
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
           <a href="#diary-dates" class="mdl-layout__tab is-active">一覧</a>
-          <a href="#diary-dates" class="mdl-layout__tab">やったこと</a>
-          <a href="#features" class="mdl-layout__tab">朝食</a>
-          <a href="#features" class="mdl-layout__tab">昼食</a>
-          <a href="#features" class="mdl-layout__tab">夕食</a>
-          <a href="#features" class="mdl-layout__tab">その他食事</a>
-          <a href="#features" class="mdl-layout__tab">感想的なもの</a>
+          <a href="#breakfast" class="mdl-layout__tab">朝食</a>
+          <a href="#lunch" class="mdl-layout__tab">昼食</a>
+          <a href="#dinner" class="mdl-layout__tab">夕食</a>
+          <a href="#impressionistic" class="mdl-layout__tab">感想的なもの</a>
         </div>
       </header>
       <main class="mdl-layout__content">
+
         <div class="mdl-layout__tab-panel is-active" id="diary-dates">
           <section class="section--center mdl-grid mdl-grid--no-spacing">
             <div class="mdl-cell mdl-cell--12-col">
@@ -50,6 +49,28 @@
             </div>
           </section>
         </div>
+
+        <div class="mdl-layout__tab-panel" id="breakfast">
+          <section class="section--center mdl-grid mdl-grid--no-spacing">
+            <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+              <div class="mdl-card__title">
+                <h2 class="mdl-card__title-text">Welcome</h2>
+              </div>
+              <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Mauris sagittis pellentesque lacus eleifend lacinia...
+              </div>
+            </div>            
+          </section>
+        </div>
+
+        <div class="mdl-layout__tab-panel" id="lunch">
+        </div>
+        <div class="mdl-layout__tab-panel" id="dinner">
+        </div>
+        <div class="mdl-layout__tab-panel" id="impressionistic">
+        </div>
+
         <footer class="mdl-mega-footer">
           <div class="mdl-mega-footer--middle-section">
               <h1 class="mdl-mega-footer--heading">他サイト</h1>
