--- a/source/views/login.html
+++ b/source/views/login.html
@@ -28,7 +28,7 @@
   <div class="loading-message">Loading...</div>
   <div class="loader"></div>
 
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
   <script src="/js/login.min.js"></script>
 </body>
 </html>
